--- a/overrides/assets/stylesheets/custom.css
+++ b/overrides/assets/stylesheets/custom.css
@@ -4,7 +4,8 @@
     --c-bg: #ffffff;
     --c-bg-light: #f3f4f5;
     --c-bg-lighter: #eeeeee;
-    --c-bg-navbar: var(--c-bg);
+    --c-bg-navbar: #ffffff;
+    /*--c-bg-navbar: #ab47bd;*/
     --c-bg-sidebar: var(--c-bg);
     --c-bg-arrow: #cccccc;
     --c-text: #2c3e50;
@@ -52,9 +53,11 @@
 }
 
 .navbar {
-    --navbar-line-height: calc( var(--navbar-height) - 2 * var(--navbar-padding-v) );
+    --navbar-line-height: calc(var(--navbar-height) - 2 * var(--navbar-padding-v));
     padding: var(--navbar-padding-v) var(--navbar-padding-h);
-    line-height: var(--navbar-line-height)
+    line-height: var(--navbar-line-height);
+    border-bottom: 1px solid var(--c-border);
+    background-color: var(--c-bg-navbar);
 }
 
 .navbar .logo {
@@ -64,9 +67,11 @@
 }
 
 .navbar .site-name {
-    font-size: 1.3rem;
+    /*font-size: 1.3rem;*/
+    font-size: 1rem;
     font-weight: 600;
     color: var(--c-text);
+    /*color: #eaecef;*/
     position: relative
 }
 
@@ -79,7 +84,8 @@
     height: var(--navbar-line-height);
     padding-left: var(--navbar-padding-h);
     white-space: nowrap;
-    font-size: .9rem
+    /*font-size: .9rem*/
+    font-size: .6rem
 }
 
 .navbar .navbar-items-wrapper .search-box {
@@ -89,7 +95,7 @@
 
 @media (max-width: 719px) {
     .navbar {
-        padding-left:4rem
+        padding-left: 4rem
     }
 
     .navbar .can-hide {
@@ -111,10 +117,10 @@
 .navbar-items a {
     display: inline-block;
     line-height: 1.4rem;
-    color: inherit
+    /*color: #ffffff;*/
 }
 
-.navbar-items a:hover,.navbar-items a.router-link-active {
+.navbar-items a:hover, .navbar-items a.router-link-active {
     color: var(--c-text)
 }
 
@@ -129,22 +135,22 @@
     margin-left: 0
 }
 
-.navbar-items .navbar-item>a:hover,.navbar-items .navbar-item>a.router-link-active {
+.navbar-items .navbar-item > a:hover, .navbar-items .navbar-item > a.router-link-active {
     margin-bottom: -2px;
     border-bottom: 2px solid var(--c-text-accent)
 }
 
 @media (max-width: 719px) {
     .navbar-items .navbar-item {
-        margin-left:0
+        margin-left: 0
     }
 
-    .navbar-items .navbar-item>a:hover,.navbar-items .navbar-item>a.router-link-active {
+    .navbar-items .navbar-item > a:hover, .navbar-items .navbar-item > a.router-link-active {
         margin-bottom: 0;
         border-bottom: none
     }
 
-    .navbar-items a:hover,.navbar-items a.router-link-active {
+    .navbar-items a:hover, .navbar-items a.router-link-active {
         color: var(--c-text-accent)
     }
 }
@@ -183,7 +189,7 @@
 
 @media screen and (max-width: 719px) {
     .toggle-sidebar-button {
-        display:block
+        display: block
     }
 }
 
@@ -215,9 +221,10 @@
     cursor: pointer
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown-title,.navbar-dropdown-wrapper .navbar-dropdown-title-mobile {
+.navbar-dropdown-wrapper .navbar-dropdown-title, .navbar-dropdown-wrapper .navbar-dropdown-title-mobile {
     display: block;
-    font-size: .9rem;
+    /*font-size: .9rem;*/
+    font-size: .6rem;
     font-family: inherit;
     cursor: inherit;
     padding: inherit;
@@ -228,11 +235,11 @@
     color: var(--c-text)
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown-title:hover,.navbar-dropdown-wrapper .navbar-dropdown-title-mobile:hover {
+.navbar-dropdown-wrapper .navbar-dropdown-title:hover, .navbar-dropdown-wrapper .navbar-dropdown-title-mobile:hover {
     border-color: transparent
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown-title .arrow,.navbar-dropdown-wrapper .navbar-dropdown-title-mobile .arrow {
+.navbar-dropdown-wrapper .navbar-dropdown-title .arrow, .navbar-dropdown-wrapper .navbar-dropdown-title-mobile .arrow {
     vertical-align: middle;
     margin-top: -1px;
     margin-left: .4rem
@@ -257,19 +264,20 @@
     margin: .45rem 0 0;
     border-top: 1px solid var(--c-border);
     padding: 1rem 0 .45rem;
-    font-size: .9rem;
+    /*font-size: .9rem;*/
+    font-size: .6rem;
     color: #000;
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle>span {
+.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle > span {
     padding: 0 1.5rem 0 1.25rem
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle>a {
+.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle > a {
     font-weight: inherit
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle>a.router-link-active:after {
+.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle > a.router-link-active:after {
     display: none
 }
 
@@ -279,7 +287,7 @@
 }
 
 .navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subitem-wrapper .navbar-dropdown-subitem {
-    font-size: .9em
+    font-size: .6em
 }
 
 .navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item a {
@@ -293,7 +301,7 @@
     color: #000;
 }
 
-.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item a:hover,.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item a.router-link-active {
+.navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item a:hover, .navbar-dropdown-wrapper .navbar-dropdown .navbar-dropdown-item a.router-link-active {
     color: var(--c-text-accent)
 }
 
@@ -315,11 +323,11 @@
     border-top: 0
 }
 
-.navbar-dropdown-wrapper.mobile.open .navbar-dropdown-title,.navbar-dropdown-wrapper.mobile.open .navbar-dropdown-title-mobile {
+.navbar-dropdown-wrapper.mobile.open .navbar-dropdown-title, .navbar-dropdown-wrapper.mobile.open .navbar-dropdown-title-mobile {
     margin-bottom: .5rem
 }
 
-.navbar-dropdown-wrapper.mobile .navbar-dropdown-title,.navbar-dropdown-wrapper.mobile .navbar-dropdown-title-mobile {
+.navbar-dropdown-wrapper.mobile .navbar-dropdown-title, .navbar-dropdown-wrapper.mobile .navbar-dropdown-title-mobile {
     display: none
 }
 
@@ -339,7 +347,7 @@
     padding-bottom: 0
 }
 
-.navbar-dropdown-wrapper.mobile .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle,.navbar-dropdown-wrapper.mobile .navbar-dropdown .navbar-dropdown-item>a {
+.navbar-dropdown-wrapper.mobile .navbar-dropdown .navbar-dropdown-item .navbar-dropdown-subtitle, .navbar-dropdown-wrapper.mobile .navbar-dropdown .navbar-dropdown-item > a {
     font-size: 15px;
     line-height: 2rem
 }
@@ -353,24 +361,22 @@
     height: 1.8rem
 }
 
-.navbar-dropdown-wrapper:not(.mobile):hover .navbar-dropdown,.navbar-dropdown-wrapper:not(.mobile).open .navbar-dropdown {
-    display: block!important
-}
 
 .navbar-dropdown-wrapper:not(.mobile).open:blur {
     display: none
 }
 
+/**隐藏下拉框**/
 .navbar-dropdown-wrapper:not(.mobile) .navbar-dropdown {
     display: none;
-    height: auto!important;
+    height: auto !important;
     box-sizing: border-box;
     max-height: calc(100vh - 2.7rem);
     overflow-y: auto;
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: var(--c-bg-navbar);
+    background-color: #ffffff;
     padding: .6rem 0;
     border: 1px solid var(--c-border);
     border-bottom-color: var(--c-border-dark);
@@ -378,6 +384,46 @@
     border-radius: .25rem;
     white-space: nowrap;
     margin: 0
+}
+
+/** 显示下拉框**/
+.navbar-dropdown-wrapper:not(.mobile):hover .navbar-dropdown, .navbar-dropdown-wrapper:not(.mobile).open .navbar-dropdown {
+    display: block !important
+}
+
+/* 下拉框始终保持显示状态 */
+.navbar-dropdown {
+    position: relative;
+}
+
+.arrow {
+    display: inline-block;
+    width: 0;
+    height: 0
+}
+
+.arrow.up {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-bottom: 6px solid var(--c-bg-arrow)
+}
+
+.arrow.down {
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 6px solid var(--c-bg-arrow)
+}
+
+.arrow.right {
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    border-left: 6px solid var(--c-bg-arrow)
+}
+
+.arrow.left {
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    border-right: 6px solid var(--c-bg-arrow)
 }
 
 
