--- a/overrides/partials/tabs.html
+++ b/overrides/partials/tabs.html
@@ -1,35 +1,31 @@
-<!--
-  Copyright (c) 2016-2023 Martin Donath <martin.donath@squidfunk.com>
+{%- if nav|length>1 %}
+    <!-- Main navigation -->
+    {%- for nav_item in nav %}
+        {%- if nav_item.children %}
+            <!-- 有子目录的话就有下拉菜单 -->
+            <div class="navbar-item">
+                <div class="navbar-dropdown-wrapper">
+                    <button class="navbar-dropdown-title" type="button" aria-label="{{ nav_item.title }}">
+                        <span class="title"> {{ nav_item.title }} </span>
+                        <span class="arrow down"></span>
+                    </button>
+                    <button class="navbar-dropdown-title-mobile" type="button" aria-label="{{ nav_item.title }}">
+                        <span class="title"> {{ nav_item.title }} </span>
+                        <span class="right arrow"></span>
+                    </button>
+                    <ul class="navbar-dropdown">
+                        {%- for nav_item in nav_item.children %}
+                            {% include "partials/tabs-item.html" %}
+                        {%- endfor %}
+                    </ul>
+                </div>
+            </div>
+        {% else %}
+            <!-- 没有子目录的话就只有一个标题 -->
+            <div class="navbar-item">
+                <a href="{{ nav_item.url  | url }}" aria-label="{{ nav_item.title }}">{{ nav_item.title }} </a>
+            </div>
 
-  Permission is hereby granted, free of charge, to any person obtaining a copy
-  of this software and associated documentation files (the "Software"), to
-  deal in the Software without restriction, including without limitation the
-  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
-  sell copies of the Software, and to permit persons to whom the Software is
-  furnished to do so, subject to the following conditions:
-
-  The above copyright notice and this permission notice shall be included in
-  all copies or substantial portions of the Software.
-
-  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
-  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
-  IN THE SOFTWARE.
--->
-
-<!-- Hack: unset variable, as we're using it recursively in tabs-item.html -->
-{% set class = "" %}
-
-<!-- Navigation tabs -->
-<div class="navbar">
-    <div class="navbar-items-wrapper" style="max-width: 1301px;"><!--[--><!--]-->
-        <nav class="navbar-items can-hide">
-            {% for nav_item in nav %}
-                {% include "partials/tabs-item.html" %}
-            {% endfor %}
-        </nav>
-    </div>
-</div>
+        {% endif %}
+    {%- endfor %}
+{%- endif %}
