--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,6 +1,6 @@
 <!-- 版权信息 -->
 <!-- Set from config but allow override -->
-{% set disqus = config.extra.disqus %} {% if page and page.meta and page.meta.disqus is string %} {% set disqus = page.meta.disqus
+<!-- {% set disqus = config.extra.disqus %} {% if page and page.meta and page.meta.disqus is string %} {% set disqus = page.meta.disqus
   %} {% endif %}
 {% set copyright = config.extra.copyright %} {% if page and page.meta and page.meta.copyright is string %} {% set copyright = page.meta.copyright
   %} {% endif %}
@@ -11,7 +11,7 @@
   <span><i class="md-icon">{% include ".icons/material/pencil.svg" %}</i>发现错误？想一起完善？ <a href="{{ page.edit_url }}" title="{{ lang.t('edit.link.title') }}" class="page_edit_url">在 GitHub 上编辑此页！</a></span><br>
   <span><i class="md-icon">{% include ".icons/material/account-multiple.svg" %}</i>本页面贡献者：</span><span class="page_contributors">{{ authors }}</span><br>
   <span><i class="md-icon">{% include ".icons/material/copyright.svg" %}</i>本页面的全部内容在 <strong>{{ copyright }}</strong> 协议之条款下提供，附加条款亦可能应用</span>
-</blockquote>
+</blockquote> -->
 
 <!-- 评论系统 -->
 
